bad/bin_op_gth_void_null.example_compiler_output
ERROR
[1mbad/bin_op_gth_void_null.lat:4:8: [1;31merror: [0;1moperator > is defined only for int values and string values, not `void` and `null`[m
	foo() > null;
	      [1;32m^[m
